--- a/build-config.json
+++ b/build-config.json
@@ -4,6 +4,8 @@
     "distAssets": "./dist/assets/",
     "srcPages": [
       "./src/content/**/readme.md",
+      "./src/content/**/page.yml",
+      "./src/content/**/*.(jpg|jpeg|png|gif|ms|dot|neato|fdp|sfdp|twopi|circo)",
       "./src/data/**/*.yml"
     ],
     "srcContentBase": "./src/content",
