--- a/src/content/h1/tags/shader/shader_transparent_water/page.yml
+++ b/src/content/h1/tags/shader/shader_transparent_water/page.yml
@@ -5,3 +5,6 @@ imgCaption:
   en: A water shader used in _Death Island_
 stub: true
 tagName: shader_transparent_water
+thanks:
+  gbMichelle:
+    en: Discovering that base maps do not tile
