--- a/src/content/h1/map/page.yml
+++ b/src/content/h1/map/page.yml
@@ -2,6 +2,9 @@ title:
   en: Map cache file
 img: map-icon.jpg
 workflowName: map
+keywords:
+  en:
+    - map
 thanks:
   Masterz1337:
     en: Context on OpenSauce capabilities
@@ -9,3 +12,5 @@ thanks:
     en: Tag data limit info
   gbMichelle:
     en: How maps are loaded into memory
+  Kavawuvi:
+    en: Map base memory addresses
