Add thanks note for Rosy

--- a/src/content/h1/tags/actor_variant/page.yml
+++ b/src/content/h1/tags/actor_variant/page.yml
@@ -13,3 +13,5 @@ keywords:
 thanks:
   Jakey:
     en: Providing descriptions for all tag fields
+  Rosy:
+    en: Discovering actors drop 100% charge weapons on no-grenade deaths
