Document Sapien shortcuts and AI engine

--- a/src/content/h1/engine/renderer/page.yml
+++ b/src/content/h1/engine/renderer/page.yml
@@ -7,4 +7,6 @@ thanks:
   Jakey:
     en: Renderer regressions
   gbMichelle:
-    en: Researching how shadow maps work
+    en: Researching how shadow maps work, extreme distance limits testing
+  Conscars:
+    en: Extreme distance limits testing
