--- a/src/content/h1/tools/hek/sapien/page.yml
+++ b/src/content/h1/tools/hek/sapien/page.yml
@@ -9,6 +9,10 @@ keywords:
     - scenario
 toolName: Sapien
 thanks:
+  The Cereal Killer:
+    en: Discovering Sapien keyboard shortcuts
+  kirby_422:
+    en: Describing baggage.txt file
   Real Fake Doors:
     en: Sharing NT Core knowledge
   gruntfromhalo:
